fix overflow problem in light effect with mouse

--- a/style.css
+++ b/style.css
@@ -377,6 +377,7 @@ html, body{
 /* media end */
 /* main background start */
 .backgroundMain {
+    overflow: hidden;
     height: 100%;
     position: absolute;
     top: 0;
